...
/* Button text when user completes First Time Use */
"FTUFinishedButton" = "Let's Start!";

// MARK: - Stations List

/*  Name of the tab bar item for the Stations List */
"StationsListTabBarItemLabel" = "Stations List";

/* Title in the nav bar of the Stations List view */
"StationsListNavBarTitle" = "Stations";

/* Table section header in the Stations List for the Closest Stations */
"StationsListClosestStationsSectionHeader" = "Closest Stations";
...
/* Label that follows the number of docks that are available at the station */
"StationDetailDocksAvailable" = "Docks Open";

// MARK: - Settings

/* Name of the tab bar item for the Settings view */
"SettingsTabBarItemLabel" = "Settings";

/* Title in the nav bar of the Settings view */
"SettingsNavBarTitle" = "Settings";

/* Setting group label for items specific to the bike service */
"SettingsServiceGroup" = "Service";
...
