...
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" label="SettingsCity">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <connections>
                                            <segue destination="3hB-MF-PFn" kind="show" id="6DU-nD-3l6"/>
                                        </connections>
                                    </tableViewCell>
...
