...
        }

        return response.networks ?? []
    }

    private static let networksJSON = #"""
{"networks":[{"id":"arbike","name":"ARbike","href":"/v2/networks/arbike","location":{"city":"Arezzo","country":"IT"}},{"id":"aw-bike","name":"AW-bike Ahrweiler","href":"/v2/networks/aw-bike","location":{"city":"Ahrweiler","country":"DE"}},{"id":"abu-dhabi-careem-bike","name":"Abu Dhabi Careem BIKE","href":"/v2/networks/abu-dhabi-careem-bike","location":{"city":"Abu Dhabi","country":"AE"}},{"id":"a
"""#
}

